# digital_twin

./: .gitattributes  .gitignore  .gitignore.swp  .gitmodules  .tmuxp.yml  .ubuntu_x86_64.code-workspace  OWMR.DsnWrk  OWMR.layerset  README-CH.md  README.adoc  README.md  Tutorial.md  digital_twin.code-workspace  ubuntu20.04.code-workspace  ubuntu20.04_x86.code-workspace  win10.code-workspace
Communication/: Communication.Harness  Communication.PcbDoc  Communication.PrjPcb  Communication.PrjPcbStructure  Communication.SchDoc
DE0_NANO/: DE0_NANO.done  DE0_NANO.fit.summary  DE0_NANO.flow.rpt  DE0_NANO.map.rpt  DE0_NANO.map.summary  DE0_NANO.pin  DE0_NANO.qws  DE0_NANO.sta.summary  DE0_NANO.v
DE0_NANO/db/: DE0_NANO.(0).cnf.cdb  DE0_NANO.(0).cnf.hdb  DE0_NANO.cmp.rdb  DE0_NANO.cmp_merge.kpt  DE0_NANO.db_info  DE0_NANO.hif  DE0_NANO.map.bpm  DE0_NANO.map.cdb  DE0_NANO.map.hdb  DE0_NANO.map.kpt  DE0_NANO.map.qmsg  DE0_NANO.map.rdb  DE0_NANO.map_bb.cdb  DE0_NANO.map_bb.hdb  DE0_NANO.pre_map.hdb  DE0_NANO.root_partition.map.reg_db.cdb  DE0_NANO.rtlv.hdb  DE0_NANO.rtlv_sg.cdb  DE0_NANO.sgdiff.cdb  DE0_NANO.sgdiff.hdb
DE0_NANO_MotorDrive/: .gitignore  DE0_NANO.qsf  DE0_NANO.sdc  DE0_NANO.v  PLLJ_PLLSPE_INFO.txt
DE0_NANO_MotorDrive/burn/: !RunAll.sh  0.cpfile.sh  1.conv2flash.sh  2.burn2epcs.sh  BurnToEPCS.txt  DE0_NANO.flash  robot_motor.flash
DE0_NANO_MotorDrive/demo_batch/: DE0_NANO.sof
DE0_NANO_MotorDrive/doc/: DE系列腳位圖_20210825.xlsx  De0 nano 腳位.xlsx  MotorDriverflow.vsdx
DE0_NANO_MotorDrive/output_files/: DE0_NANO.sof  TimerCounter.stp  TimerCounter_auto_stripped.stp  gsensor.stp  gsensor_auto_stripped.stp  stp1.stp  stp1_auto_stripped.stp
DE0_NANO_MotorDrive/qsys/: new_component_hw.tcl  sopc.bsf  sopc.cmp  sopc.html  sopc.qsys  sopc.sopcinfo  sysreg_hw.tcl
Libraries/: General_Connector.PcbLib  General_Connector.SchLib  General_Devices.PcbLib  General_Devices.SchLib  OWMR.PcbLib  OWMR.layerset  SamacSys.PcbLib  SamacSys.SchLib
MotorCtrl/: .gitignore  MotorCtrl.Harness  MotorCtrl.OutJob  MotorCtrl.PcbDoc  MotorCtrl.PrjPcb  MotorCtrl.PrjPcbStructure  MotorCtrl.SchDoc  MotorCtrl2.Harness  MotorCtrl2.SchDoc
OWMR/: OWMR.OutJob  OWMR.PrjPcb  OWMR.PrjPcbStructure  Top.PcbDoc
OWMR/Libraries/: OWMR.SchLib
OWMR/__Previews/: Communication.SchDocPreview  MotorCtrl.SchDocPreview  Power.SchDocPreview  Sheet1.SchDocPreview  Simulation.SchDocPreview  Top.SchDocPreview
Power/: Power.PcbLib  Power.PrjPcb  Power.PrjPcbStructure  Power.SchDoc  Power.SchLib  USB-C Power.SchDoc
Power/USB-C Power/: Battery_Charging_and_Bypass_Power_Supply.SchDoc  Battery_and_Bypass_Controller_Connectons.SchDoc  Block_Diagram.SchDoc  Cover_Page.SchDoc  MCU_and_Peripheral_Circuits.SchDoc  Manual_Controll_and_LEDs.SchDoc  PD_BCR_Connections.SchDoc  PD_Controll_and_LED_description.xlsx  Top_Level.SchDoc  (+11 more)
Reference/: partition_Temp.DXF
Simulation/: Simulation.PrjPcb  Simulation.PrjPcbStructure  Simulation.SchDoc
Template/: Contents.xlsx  Copy_SchDot_Script.bat  General_Template.SchDot  System_Path.txt
de0_nano/: win10.code-workspace
digital_twin_bridge/: CMakeLists.txt  package.xml
docker/: .dockerignore  Dockerfile  Dockerfile_aarch64  Dockerfile_arrch64  Dockerfile_x86_64  build-dokcer-image.bash  build.sh  dockerfile  entrypoint_arrch64.sh  entrypoint_x86_64.sh  get_graph_card.bash  get_param.sh  run-docker-container.bash
docker_ros2_coppeliasim/: Dockerfile  build.sh  get_param.sh  run.sh
initial/: README.adoc
motion/: CMakeLists.txt  data_save.sh  package.xml
motion/include/motion/: RJ45_communication.h  base_control.h  four_wheel_kinematics.h  motor_data.h  node_handle.h  parameter.h
motion/include/serial/: node_handle.h  parameter.h  serial.h
motion/launch/: motion.launch  serial.launch
motion/msg/: FourMotorCmd.msg  FourMotorStates.msg  IMU.msg  MotorStates.msg
motion/src/: CMakeLists.txt  RJ45_communication.cpp  base_control.cpp  four_wheel_kinematics.cpp  kinematics.cpp  motion.cpp  node_handle.cpp
motion/src/motion/: base_control.cpp  node_handle.cpp
motion/src/refenerce/: client.cpp  create_2d_array.cpp  test.cpp
motion/src/serial/: node_handle.cpp  serial.cpp  serial_rx.cpp  serial_tx.cpp
motion/test/: CMakeLists.txt  base_control_test.cpp  four_wheel_kinematics_test.cpp  motion_test.cpp  node_handle_test.cpp  pub_topic.cpp  pub_topic_test.cpp
motion/test/motion/: base_control_test.cpp
motion/test/serial/: ros_rx_serial_test.cpp  ros_tx_serial_test.cpp  rx_serial_test.cpp  tx_serial_test.cpp
old_data/: OWMR.PcbLib  OWMR.SchLib
pc_docker/: .dockerignore  Dockerfile  build-dokcer-image.bash  run-docker-container.bash
pc_software/: .gitignore  win10.code-workspace
pi_docker/: Dockerfile  entrypoint.bash
pi_sshfs/: README.md  mount_file.sh  sync_to_pi.sh
refenerce/: asynchronous_input.cpp  data_save.sh  display.launch  gazebo2.launch  import_model_urdf.launch  kinematics.py  motor.sh  rx_serial.cpp  test  test.cpp  test.py  tmp.cpp  tx_serial.cpp
ros2_template/cpp_parameters/: CMakeLists.txt  package.xml
ros2_template/cpp_parameters/launch/: cpp_parameters_launch.py
ros2_template/cpp_parameters/src/: cpp_parameters_node.cpp
ros2_template/more_interfaces/: CMakeLists.txt  package.xml
ros2_template/more_interfaces/msg/: AddressBook.msg
ros2_template/more_interfaces/src/: publish_address_book.cpp
rule/: 99-rplidar.rules  create_rplidar_rule.sh  create_rule.sh  delete_rplidar_rule.sh  delete_rule.sh  uart_drive.rules
script/: INSTALL.md  install_docker.sh  set_network.sh
simulator/: topic_wheel.sh
simulator/digital_twin/src/: CMakeLists.txt  cmd.sh  data_handle.cpp  motor_control.cpp  motor_node.cpp  node_handle.cpp  robot_control.cpp
simulator/model/: package.xml
simulator/model/omwr/config/: omwr.yaml
simulator/model/omwr/meshes/: omwr_link.STL  wheel_link_1.STL  wheel_link_2.STL  wheel_link_3.STL  wheel_link_4.STL
simulator/model/omwr/xacro/: controller.gazebo  description.gazebo  omwr.xacro
strategy/: CMakeLists.txt  package.xml
template/: CMakeLists.txt  package.xml
usb_rule/: create_rule.sh  delete_rule.sh
(+1635 files in other folders)
