<?xml version="1.0"?>
<package format="2">
  <name>model</name>
  <version>0.0.0</version>
  <description>This is used to store urdf and xacro exported by Solidworks</description>

  <maintainer email="ycpss91255@gmail.com">YUN-CHIEN CHEN</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
